@@ -2,6 +2,10 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    - make bugtracker pod section only list web link, not email; this
+      allow easier modification for use with github instead of RT which
+      does not provide an email option
+
 0.020     2011-09-23 15:11:51 America/New_York
 
     - added code to copy README.pod and META.json to repo directory
